# GeminiWeb

.github/workflows/: ci.yml  release.yml
docs/: Architecture.md  Bypassing-API-Keys-for-MOdel-Routing.md  Engineering-Director-Review-TDD-v0.1.md  Engineering-Director-Review-TDD-v0.2-p1.md  Engineering-Director-Review-TDD-v0.2-p2.md  Mandatory-Implementation-Directives.md  TDD-v0.1.md  TDD-v0.2-p2.md  TDD-v0.2.md  project-phases.md
geminiweb-safe-provider/: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
geminiweb-safe-provider/docs/: architecture.md  milestone-1.md  openai-compatibility.md  release.md  reliability.md  runbook.md  scope.md  shipping.md
geminiweb-safe-provider/scripts/: run_dev.sh  run_server.sh
geminiweb-safe-provider/src/geminiweb_provider/: __init__.py  config.py  credential_store.py  crypto.py  errors.py  gemini_official_session.py  http_security.py  logging.py  metrics.py  openai_compat.py  provider.py  router_contracts.py  server.py  streaming.py  tiering.py
geminiweb-safe-provider/tests/: test_crypto.py  test_gemini_official_session.py  test_openai_compat.py  test_provider_contract.py  test_provider_mapping.py  test_reliability_hardening_v2.py  test_server_error_mapping.py  test_server_security.py  test_streaming.py
skills/: create_skills.sh  docs-unified-skills.md  unify_skills.sh
skills/backend-engineer/: SKILL.md
skills/bmad-operator/: SKILL.md
skills/browser-automation-specialist/: SKILL.md
skills/devops-platform/: SKILL.md
skills/documentation-engineer/: SKILL.md
skills/qa1/: SKILL.md
(+8 files in other folders)
