[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geminiweb-safe-provider"
version = "0.1.0"
description = "OpenAI-compatible provider scaffold for official Gemini/Vertex APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "cryptography>=42.0.0",
  "structlog>=24.1.0",
  "prometheus-client>=0.20.0",
]

[project.scripts]
geminiweb-safe-provider = "geminiweb_provider.server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]
release = [
  "build>=1.2.0",
  "twine>=5.0.0",
]
server = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
